--- a/site/style.css
+++ b/site/style.css
@@ -458,6 +458,10 @@ input {
     padding: 2% 3%;
 }
 
+.finalize_details{
+    width: 100%;
+}
+
 /* ------------------------------RESPONSIVE------------------------------ */
 
 
